# hse_nlp

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
src/: law_link_parser.py  models.py
