[project]
name = "hse-nlp"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi (==0.118.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "pymorphy2-dicts-ru (>=2.4.417127.4579844,<3.0.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "pymorphy3 (>=2.0.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.0.1,<8.0.0)",
    "ruff (>=0.14.0,<0.15.0)"
]
